@@ -51,7 +51,7 @@ else {
 
 require_once dirname(__FILE__).'/include/page_header.php';
 
-$allow_discovery = check_right_on_discovery(PERM_READ);
+$allow_discovery = check_right_on_discovery();
 $allowed_sources[] = EVENT_SOURCE_TRIGGERS;
 if ($allow_discovery) {
 	$allowed_sources[] = EVENT_SOURCE_DISCOVERY;
