@@ -21,14 +21,13 @@
 
 require_once dirname(__FILE__).'/perm.inc.php';
 
-function check_right_on_discovery($permission) {
-	if (CWebUser::$data['type'] >= USER_TYPE_ZABBIX_ADMIN) {
-		if (count(get_accessible_nodes_by_user(CWebUser::$data, $permission, PERM_RES_IDS_ARRAY))) {
-			return true;
-		}
-	}
-
-	return false;
+/**
+ * Returns true if the user has the permissions to network discovery.
+ *
+ * @return bool
+ */
+function check_right_on_discovery() {
+	return (CWebUser::getType() >= USER_TYPE_ZABBIX_ADMIN);
 }
 
 function svc_default_port($type_int) {
