@@ -7,6 +7,7 @@ New features:
 ..F.I..... [ZBXNEXT-715] increased the size of sysmaps_elements.label and sysmaps_links.label fields to 2048 characters (Sasha)
 
 Bug fixes:
+A.F....... [ZBX-7238] fixed network discovery rule permission checks for admin users (Pavels)
 ..F....... [ZBX-7251] corrected multiple page headers and other text strings (Pavels)
 ..F....... [ZBX-7212] fixed interface macros priorities (Eduard)
 A.F....... [ZBX-7235] fixed activating and deactivating a web scenarios (Eduard)
